# OLiOli

./: .gitignore  CMakeLists.txt  README.md
headers/: demuxer.h
libs/sdl2/: SDL2.lib  SDL2_test.lib  SDL2main.lib
src/: demuxer.cpp  main.cpp
